changed url for superhero tab to include movies similar to Avengers: Endgame

--- a/busan.ios/Base.lproj/Main.storyboard
+++ b/busan.ios/Base.lproj/Main.storyboard
@@ -201,9 +201,7 @@
                         <viewLayoutGuide key="safeArea" id="6AQ-Ta-6G9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Superhero" id="OXD-4R-vfy">
-                        <barButtonItem key="backBarButtonItem" title="back" id="TRG-lH-sDQ"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Superhero" id="OXD-4R-vfy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kr9-I8-zU2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
