--- a/busan.ios/Base.lproj/Main.storyboard
+++ b/busan.ios/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -198,14 +199,42 @@
                     <view key="view" contentMode="scaleToFill" id="XLy-yP-dAA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="h3Y-NP-hIp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NVH-tl-ch4">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9bd-fe-kH2">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pQ2-kH-Qat">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6AQ-Ta-6G9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="h3Y-NP-hIp" secondAttribute="bottom" id="C8R-gR-0Uy"/>
+                            <constraint firstItem="h3Y-NP-hIp" firstAttribute="leading" secondItem="6AQ-Ta-6G9" secondAttribute="leading" id="FVM-xm-0gi"/>
+                            <constraint firstItem="h3Y-NP-hIp" firstAttribute="trailing" secondItem="6AQ-Ta-6G9" secondAttribute="trailing" id="frE-95-58T"/>
+                            <constraint firstItem="h3Y-NP-hIp" firstAttribute="top" secondItem="XLy-yP-dAA" secondAttribute="top" id="yZ2-fL-FGQ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Superhero" id="OXD-4R-vfy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kr9-I8-zU2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="809" y="832"/>
+            <point key="canvasLocation" x="808.69565217391312" y="831.52173913043487"/>
         </scene>
         <!--Superhero-->
         <scene sceneID="NYK-BE-0sW">
