--- a/busan.ios/Base.lproj/Main.storyboard
+++ b/busan.ios/Base.lproj/Main.storyboard
@@ -210,7 +210,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9bd-fe-kH2">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieGridCell" id="9bd-fe-kH2" customClass="MovieGridCell" customModule="busan_ios" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pQ2-kH-Qat" customClass="MovieGridCell" customModule="busan_ios" customModuleProvider="target">
@@ -224,6 +224,9 @@
                                             </subviews>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="200" height="250"/>
+                                        <connections>
+                                            <outlet property="posterView" destination="pQ2-kH-Qat" id="vLa-7i-f02"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
