--- a/busan.ios/Storyboards/Base.lproj/Main.storyboard
+++ b/busan.ios/Storyboards/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Movies-->
+        <!--Now Playing-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MovieTableViewController" customModule="busan_ios" customModuleProvider="target" sceneMemberID="viewController">
@@ -82,7 +82,7 @@
                             <constraint firstAttribute="trailing" secondItem="olr-tD-2U3" secondAttribute="trailing" id="ilB-cO-ekE"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Movies" id="QDd-bt-S8Y"/>
+                    <navigationItem key="navigationItem" title="Now Playing" id="QDd-bt-S8Y"/>
                     <connections>
                         <outlet property="tableView" destination="olr-tD-2U3" id="jgf-lD-wMJ"/>
                     </connections>
@@ -103,6 +103,7 @@
                     <connections>
                         <segue destination="4mB-1u-BYS" kind="relationship" relationship="viewControllers" id="clG-vu-8mq"/>
                         <segue destination="ggF-VJ-KPL" kind="relationship" relationship="viewControllers" id="DLG-aE-pXO"/>
+                        <segue destination="ZOe-6I-jk5" kind="relationship" relationship="viewControllers" id="og2-mZ-bvx"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="46j-4E-8aH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -192,7 +193,7 @@
             </objects>
             <point key="canvasLocation" x="19" y="82"/>
         </scene>
-        <!--Superhero-->
+        <!--Superhero Theme-->
         <scene sceneID="eBZ-Uw-6Ni">
             <objects>
                 <viewController id="kVb-wy-feW" customClass="MovieGridViewController" customModule="busan_ios" customModuleProvider="target" sceneMemberID="viewController">
@@ -240,7 +241,7 @@
                             <constraint firstItem="h3Y-NP-hIp" firstAttribute="leading" secondItem="XLy-yP-dAA" secondAttribute="leading" id="ohc-Vu-QsW"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Superhero" id="OXD-4R-vfy"/>
+                    <navigationItem key="navigationItem" title="Superhero Theme" id="OXD-4R-vfy"/>
                     <connections>
                         <outlet property="collectionView" destination="h3Y-NP-hIp" id="Vog-53-gms"/>
                     </connections>
@@ -248,6 +249,29 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kr9-I8-zU2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="807.24637681159425" y="831.02678571428567"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8Iy-wW-KBm">
+            <objects>
+                <viewController id="TOe-2F-iDb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cet-4c-TFc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search for movies" translatesAutoresizingMaskIntoConstraints="NO" id="8yh-bR-zV1">
+                                <rect key="frame" x="0.0" y="62" width="414" height="51"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VXK-jy-GSJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="niG-Wb-Rmj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qta-Zg-UQ8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="807" y="1552"/>
         </scene>
         <!--Superhero-->
         <scene sceneID="NYK-BE-0sW">
@@ -268,11 +292,31 @@
             </objects>
             <point key="canvasLocation" x="19" y="831"/>
         </scene>
+        <!--Search-->
+        <scene sceneID="XIn-LZ-edr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZOe-6I-jk5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="gK0-yI-mfu"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AzV-Uv-Qxf">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TOe-2F-iDb" kind="relationship" relationship="rootViewController" id="ay2-iw-dX1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QmR-Ex-Qji" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="1551.5625"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Iw8-Z5-0Ao"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="now_playing_tabbar_item" width="21" height="21"/>
         <image name="superhero_tabbar_item" width="21" height="23"/>
         <systemColor name="systemBackgroundColor">
